# aihelpdesk

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml
backend/: kb_articles.py  reindex.py  run_dev.py  seed.py
backend/app/: main.py  schemas.py
backend/app/agents/: duplicate_agent.py  intent_agent.py  orchestrator.py  rag_agent.py
backend/app/api/: admin.py  tickets.py
backend/app/core/: config.py  diagnostics.py  embeddings.py  gemini.py  llm.py  tls.py  vectorstore.py
backend/app/services/: analytics_service.py  auth_service.py  kb_service.py  ticket_service.py
data/: helpdesk.db
data/chroma/: chroma.sqlite3  ticket_embeddings.json
docs/: AI_Helpdesk_Router_Presentation.pptx
frontend/: .env.example  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  config.js
frontend/src/api/: auth.js  tickets.js
frontend/src/components/: ArticleView.jsx  FeedbackForm.jsx  Sidebar.jsx  TicketDetail.jsx
frontend/src/hooks/: useTickets.js
frontend/src/pages/: EmployeePage.jsx  EscalationsPage.jsx  KnowledgeBasePage.jsx  LoginPage.jsx
